updated view templating

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% include('../partials/head.ejs') %>
-</head>
-<body class="container">
-    asd
-<main>
-</main>
+<% include('../partials/head.ejs') %>
 
-<footer>
-    <% include('../partials/footer.ejs') %>
-</footer>
+asdaa
 
-</body>
-</html>
+
+<% include('../partials/footer.ejs') %>
+
