--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -1,9 +1,15 @@
-<!-- views/partials/head.ejs -->
-<meta charset="UTF-8">
-<title>Super Awesome</title>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- views/partials/head.ejs -->
+    <meta charset="UTF-8">
+    <title>Super Awesome</title>
 
-<!-- CSS (load bootstrap from a CDN) -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<style>
-    body    { padding-top:50px; }
-</style>
+    <!-- CSS (load bootstrap from a CDN) -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <style>
+        body    { padding-top:50px; }
+    </style>
+</head>
+<body class="container">
+
