--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -3,7 +3,7 @@
 <form action="/register" method="post">
     <div>
         <label>Full name:</label>
-        <input type="text" name="full_name"/>
+        <input type="text" name="username"/>
     </div>
     <div>
         <label>Email:</label>
