--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -6,10 +6,8 @@
     <title>Super Awesome</title>
 
     <!-- CSS (load bootstrap from a CDN) -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <style>
-        body    { padding-top:50px; }
-    </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
 </head>
-<body class="container">
+<body class="">
 
